--- a/documentation.html
+++ b/documentation.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentation</title>
+    <title>MovieFetcher Documentation</title>
 </head>
 <body>
-    <h1>Documentation</h1>
-    <h2>Introduction</h2>
-    <p>I am creating a <span>movieAPI</span> for an application called “myFlix” that interacts with a database that stores data about different movies. The web application will provide users with access to information about different movies, directors, and genres. Users will be able to sign up, update their personal information, and create a list of their favorite movies. </p>
+    <h1>MovieFetcher API</h1>
+    <p>Welcome to my MovieFetcher API documentation!</p>
+    <p>I am creating a <span>movieAPI</span> for my application called <span>"MovieFetcher"</span> that interacts with a database that stores data about different movies. The web application provides users with access to information about different movies, directors, and genres. Users are able to sign up, update their personal information, and create a list of their favorite movies. </p>
+    <h2>Getting Started</h2>
+    <p></p>
+    <h2></h2>
+    <p></p>
 </body>
 </html>
